plugins {
    id "io.freefair.lombok" version '6.5.1'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'org.springframework.boot' version '3.1.0'
}

allprojects {
    group = 'com.ardetrick'
    version = '0.0.1-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.freefair.lombok'

    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }
}
